<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nextBtn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:showDividers="middle"
    tools:context=".datosPersonales">


    <ImageView
        android:id="@+id/myPicture"
        android:layout_width="match_parent"
        android:layout_height="331sp"
        android:contentDescription="@string/fotoPerfil"
        app:srcCompat="@drawable/circlejar" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="54sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/myName"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="335dp"
        android:stretchColumns="1">

        <TableRow android:layout_width="match_parent">

            <TextView
                android:layout_width="430dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_span="3"
                android:contentDescription="@string/informaci_n_personal"
                android:gravity="center"
                android:text="@string/personalInfo"
                android:textSize="30sp"
                tools:visibility="visible" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="261dp"
                android:padding="3dip"
                android:text="@string/tituloIdentificacion" />

            <TextView
                android:id="@+id/idNumber"
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/cedula" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/campoEmail"
                android:layout_width="261dp"
                android:padding="3dip"
                android:text="@string/campoEmail" />

            <TextView
                android:id="@+id/email"
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/myEmail" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/campoBirth"
                android:layout_width="232dp"
                android:layout_height="match_parent"
                android:padding="3dip"
                android:text="@string/campoBirth" />

            <TextView
                android:id="@+id/dateOfBirth"
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/fechaNacimiento" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/campoPlaceBirth"
                android:layout_width="261dp"
                android:padding="3dip"
                android:text="@string/campoPlaceBirth" />

            <TextView
                android:id="@+id/city"
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/city" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/campoAddress"
                android:layout_width="261dp"
                android:padding="3dip"
                android:text="@string/direccionResidc" />

            <TextView
                android:id="@+id/myAddress"
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/direccionApto" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/campoPhone"
                android:layout_width="261dp"
                android:padding="3dip"
                android:text="@string/campoPhone" />

            <TextView
                android:id="@+id/phone"
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/myPhone" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/nextBtn1"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:gravity="center"
        android:text="Continuar"
        app:icon="@android:drawable/ic_media_next" />


</LinearLayout>