<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/txt1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rosadoClaro"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/descrTxt"
        android:layout_width="278dp"
        android:layout_height="83dp"
        android:layout_marginTop="385dp"
        android:layout_marginBottom="256dp"
        android:contentDescription="@string/descrTxt"
        android:gravity="center"
        android:text="@string/descrTxt"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="269dp"
        android:layout_height="382dp"
        android:contentDescription="@string/descripFotoInicial"
        app:srcCompat="@drawable/pic2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="74dp"
        tools:layout_editor_absoluteY="69dp" />

    <Button
        android:id="@+id/startBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:contentDescription="@string/descripBtn"
        android:text="@string/incioBoton"
        app:icon="@android:drawable/ic_media_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.898"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>